fix: Fix css for handoff container in dark mode (#1536)

--- a/com.microsoft.copilot.eclipse.ui/css/dark.css
+++ b/com.microsoft.copilot.eclipse.ui/css/dark.css
@@ -61,23 +61,26 @@
 	background-color: #1E1F22;
 }
 
-#chat-action-bar-wrapper 
+#chat-action-bar-wrapper, 
 #chat-action-bar-wrapper * {
 	background-color: #1E1F22;
-}
-
-#chat-action-bar CurrentReferencedFile > Label.text-secondary {
-	color: #A4A4A4;
-}
-
-#chat-container > HandoffContainer > Label.text-secondary {
-	color: #A4A4A4;
 }
 
 #chat-action-bar,
 #chat-action-bar * {
 	color: #DEE1E5;
 	background-color: #48484C;
+}
+#chat-action-bar CurrentReferencedFile > Label.text-secondary {
+	color: #A4A4A4;
+}
+
+#chat-container > HandoffContainer,
+#chat-container > HandoffContainer > * {
+	background-color: #1E1F22;
+}
+#chat-container > HandoffContainer > Label.text-secondary {
+	color: #A4A4A4;
 }
 
 #chat-content-viewer .btn-primary {
