--- a/com.microsoft.copilot.eclipse.ui/css/light.css
+++ b/com.microsoft.copilot.eclipse.ui/css/light.css
@@ -66,18 +66,21 @@
 	background-color: #F8F8F8;
 }
 
-#chat-action-bar CurrentReferencedFile > Label.text-secondary {
-	color: #808080;
-}
-
-#chat-container > HandoffContainer > Label.text-secondary {
-	color: #808080;
-}
-
 #chat-action-bar,
 #chat-action-bar * {
 	color: #000000;
 	background-color: #FFFFFF; 
+}
+#chat-action-bar CurrentReferencedFile > Label.text-secondary {
+	color: #808080;
+}
+
+#chat-container > HandoffContainer,
+#chat-container > HandoffContainer > * {
+	background-color: #F8F8F8;
+}
+#chat-container > HandoffContainer > Label.text-secondary {
+	color: #808080;
 }
 
 #chat-content-viewer .btn-primary {
